--- a/views/index.ejs
+++ b/views/index.ejs
@@ -469,7 +469,7 @@
   
   <header class="navbar">
       <a href="/" class="logo-container">
-          <img src="https://i.ibb.co/C0f90mJ/tik.png" alt="Tikssave Logo" class="logo-img">
+          <img src="https://i.imgur.com/XwYQY99.jpeg" alt="Tikssave Logo" class="logo-img">
           <span class="logo-text">Tikssave.com</span>
       </a>
       <div class="menu-toggle">
