--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -318,8 +318,8 @@
                     </div>
                     <span class="server-name"><%= guild.name %></span>
                   </div>
-                  <a class="invite-btn" href="https://discord.com/oauth2/authorize?client_id=YOUR_BOT_CLIENT_ID&permissions=8&scope=bot&guild_id=<%= guild.id %>" target="_blank">Invite</a>
-                </li>
+                  <a class="invite-btn" href="https://discord.com/oauth2/authorize?client_id=1398955028487864390&permissions=51200&integration_type=0&scope=bot+applications.commands&guild_id=<%= guild.id %>" target="_blank">Invite</a>
+               </li>
               <% }) %>
             <% } else { %>
               <p class="error-message" style="display: block;">You don't have permission to add the bot to any servers or you are not in any servers.</p>
