--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -301,7 +301,7 @@
       </div>
     <% } else { %>
       <div class="dashboard-section" id="server-section">
-        <p style="margin-bottom: 20px;">Welcome, **<%= user.username %>**!</p>
+        <p style="margin-bottom: 20px;">Welcome, **<%= user.username %>** </p>
         <div class="server-list-container">
           <h2>Servers you can add the bot to:</h2>
           <ul class="server-list">
