--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -270,7 +270,7 @@
   <header class="navbar">
       <a href="/" class="logo-container">
           <img src="https://i.ibb.co/C0f90mJ/tik.png" alt="Tikssave Logo" class="logo-img">
-          <span class="logo-text">Tikssave.com</span>
+          <span class="logo-text">Tiks Save</span>
       </a>
       <div class="menu-toggle">
           <div class="bar"></div>
