--- a/views/index.ejs
+++ b/views/index.ejs
@@ -480,7 +480,7 @@
   </header>
   
   <aside class="menu-panel">
-      <a href="/admin/dashboard">Dashboard</a>
+      <a href="/dashboard">Dashboard</a>
       <a href="/discord">Discord Bot</a>
       <a href="#about">About</a>
       <a href="#faqs">FAQ</a>
