--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,12 +53,14 @@
         height: 30px;
         border-radius: 6px;
     }
-    .navbar .logo-container .logo-text {
-        font-size: 1.4rem;
-        font-weight: 700;
-        color: #fff;
-        letter-spacing: 0.5px;
-    }
+   .navbar .logo-container .logo-text {
+  font-size: 1.4rem;
+  font-weight: 700;
+  color: #fff;
+  letter-spacing: 0.5px;
+  text-decoration: none; /* Bu satırı ekleyin */
+}
+
     .navbar .menu-toggle {
         width: 28px;
         height: 22px;
