--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,11 +43,13 @@
     .navbar.hidden {
         transform: translateY(-100%);
     }
-    .navbar .logo-container {
-        display: flex;
-        align-items: center;
-        gap: 8px;
-    }
+  .navbar .logo-container {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  text-decoration: none; /* Bu satırı da ekleyin */
+}
+
     .navbar .logo-container .logo-img {
         width: 30px;
         height: 30px;
@@ -525,7 +527,7 @@
 
   <section id="about" aria-label="About TikTok Downloader">
     <h2>Why Choose Tikssave.com?</h2>
-    <p>Tikssave.com is the fastest and safest way to download TikTok videos. Our user-friendly tool allows you to save any video in just a few seconds. No extra software or applications are needed.</p>
+    <p>Tikssave.xyz is the fastest and safest way to download TikTok videos. Our user-friendly tool allows you to save any video in just a few seconds. No extra software or applications are needed.</p>
     
     <h2>No Watermarks and High Quality</h2>
     <p>The videos you download will be free of TikTok watermarks or user logos. This means you get clean videos ready for sharing or personal use. Our HD download option ensures you get the best possible video quality.</p>
@@ -537,7 +539,7 @@
     <ul>
       <li><span>1.</span> Open the TikTok app and find the video you want to download.</li>
       <li><span>2.</span> Tap the "Share" icon on the video and select "Copy Link."</li>
-      <li><span>3.</span> Return to Tikssave.com and paste the copied link into the input box above.</li>
+      <li><span>3.</span> Return to Tikssave.xyz and paste the copied link into the input box above.</li>
       <li><span>4.</span> Click the "Download" button and choose your preferred format to complete the download.</li>
     </ul>
   </section>
@@ -557,7 +559,7 @@
         Is this service completely free?
       </button>
       <div id="faq2" class="accordion-content" role="region" aria-labelledby="faq2-button">
-        <p>Yes, Tikssave.com is a completely free service. You can download as many videos as you like without any charges.</p>
+        <p>Yes, Tikssave.xyz is a completely free service. You can download as many videos as you like without any charges.</p>
       </div>
     </div>
 
@@ -588,7 +590,7 @@
   </a>
   
   <footer>
-    <p>© 2025 tikssave.com All rights reserved. | <a href="/terms">Terms of Service</a> | <a href="/privacy">Privacy Policy</a> | <a href="/rights">Rights</a></p>
+    <p>© 2025 tikssave.xyz All rights reserved. | <a href="/terms">Terms of Service</a> | <a href="/privacy">Privacy Policy</a> | <a href="/rights">Rights</a></p>
   </footer>
 
   <script>
