--- a/views/index.ejs
+++ b/views/index.ejs
@@ -474,7 +474,7 @@
   <header class="navbar">
       <a href="/" class="logo-container">
           <img src="https://i.imgur.com/XwYQY99.jpeg" alt="Tikssave Logo" class="logo-img">
-          <span class="logo-text">Tikssave.com</span>
+          <span class="logo-text">Tiks Save</span>
       </a>
       <div class="menu-toggle">
           <div class="bar"></div>
