--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -269,7 +269,7 @@
 
   <header class="navbar">
       <a href="/" class="logo-container">
-          <img src="https://i.ibb.co/C0f90mJ/tik.png" alt="Tikssave Logo" class="logo-img">
+          <img src="https://i.imgur.com/XwYQY99.jpeg" alt="Tikssave Logo" class="logo-img">
           <span class="logo-text">Tiks Save</span>
       </a>
       <div class="menu-toggle">
@@ -301,7 +301,7 @@
       </div>
     <% } else { %>
       <div class="dashboard-section" id="server-section">
-        <p style="margin-bottom: 20px;">Welcome, **<%= user.username %>** </p>
+        <p style="margin-bottom: 20px;">Welcome, <%= user.username %>! </p>
         <div class="server-list-container">
           <h2>Servers you can add the bot to:</h2>
           <ul class="server-list">
@@ -331,7 +331,7 @@
   </div>
 
   <footer>
-    <p>© 2025 tikssave.com All rights reserved. | <a href="/terms">Terms of Service</a> | <a href="/privacy">Privacy Policy</a> | <a href="/rights">Rights</a></p>
+    <p>© 2025 tikssave.xyz All rights reserved. | <a href="/terms">Terms of Service</a> | <a href="/privacy">Privacy Policy</a> | <a href="/rights">Rights</a></p>
   </footer>
 
   <script>
